my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENOSTRUCT/ENOSTRUCT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENOSTRUCT.dml:7:1: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENOSTRUCT.dml:9:6: error ENOSTRUCT: trying to get a member of a non-struct: '1' of type 'uint1'
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ENOSTRUCT.dml:12:6: error ENOSTRUCT: trying to get a member of a non-struct: 'i' of type 'pointer to int'
